allow producer restricted video access
