# modules/de.uhh.l2g.rest/de.uhh.l2g.rest-impl/rest-openapi.yaml
@@ -205,6 +205,10 @@ paths:
           name: pageSize
           schema:
             type: integer
+        - in: query
+          name: producerRestricted
+          schema:
+            type: boolean
         responses:
           200:
             content:
